--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -33,13 +33,13 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="input-container">
-                                <input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none">
+                                <input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
                                 <label for="ssid">SSID</label>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="input-container">
-                                <input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none">
+                                <input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
                                 <label for="password">Password</label>
                             </div>
                         </div>
@@ -73,19 +73,19 @@
                             <div class="col-12">
                                 <br>
                                 <div class="input-container">
-                                    <input placeholder=" " id="ssidClient" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none">
+                                    <input placeholder=" " id="ssidClient" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
                                     <label for="ssidClient">Network SSID</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="input-container">
-                                    <input placeholder=" " id="passwordClient" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none">
+                                    <input placeholder=" " id="passwordClient" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
                                     <label for="passwordClient">Network password</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="input-container">
-                                    <input placeholder=" " id="hostname" type="text" required="" minlength="1" maxlength="12" autocorrect="off" autocapitalize="none">
+                                    <input placeholder=" " id="hostname" type="text" required="" minlength="1" maxlength="12" autocorrect="off" autocapitalize="none" spellcheck="false">
                                     <label for="hostname">ESP hostname</label>
                                 </div>
                             </div>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="col-12">
                             <div class="input-container" id="macContainer">
-                                <input placeholder=" " id="macAp" type="text" required="" minLength="1" maxLength="14"> autocorrect="off" autocapitalize="none"
+                                <input placeholder=" " id="macAp" type="text" required="" minLength="1" maxLength="14" autocorrect="off" autocapitalize="none" spellcheck="false">
                                 <label for="macAp">MAC address</label>
                             </div>
                         </div>
