Deauth detector is fully implemented :sunglasses:

--- a/web_server/html/control.html
+++ b/web_server/html/control.html
@@ -15,7 +15,7 @@
 			<a href="./">Scan</a>
 			<a href="./users.html">Users</a>
 			<a href="./attack.html">Attack</a>
-			<a href="./control.html" class="active">Control</a>
+			<a href="./detector.html" class="active">Detector</a>
 			<a href="./settings.html">Settings</a>
 			<a class="right" href="./info.html">Info</a>
 		</div>
