--- a/web_server/html/error.html
+++ b/web_server/html/error.html
@@ -15,7 +15,7 @@
 			<a href="./">Scan</a>
 			<a href="./users.html">Users</a>
 			<a href="./attack.html">Attack</a>
-			<a href="./control.html">Control</a>
+			<a href="./detector.html">Detector</a>
 			<a href="./settings.html">Settings</a>
 			<a class="right" href="./info.html">Info</a>
 		</div>
@@ -42,4 +42,5 @@
 		<footer></footer>
 	</div>
 	<script src="./js/functions.js"></script>
+	<script>fadeIn()</script>
 </body>
