Client IP now visible in Info Page + other minor improvements and bug fixes

--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -80,6 +80,11 @@
 							<td><b id="beaconpackets"></b> <i>(beacon)</i></td>
 						</tr>
 						<tr>
+							<td>IP / gateway</td>
+							<td><b id="ipaddress"></b></td>
+							<td id="gateway"></td>
+						</tr>
+						<tr>
 							<td>Versions</td>
 							<td>Boot <b>v.<span id="bootversion"></span></b>_m.<span id="bootmode"></span></td>
 							<td>SDK <b id="sdk"></b></td>
