--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -92,6 +92,7 @@
 						</tr>
 					</table>
 					<div class="card-action">
+						<a class="button" onclick="resetSSID()">reset</a>
 						<a class="button right" onclick="saveSSID()">save</a>
 					</div>
 				</div>
