--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -1,255 +1,228 @@
-<head>
-	<title>Settings - Wi-PWN</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-	<link rel="stylesheet" href="./main.css">
-	<link rel="stylesheet" href="./dark.css" id="darkStyle">
-	<meta name="theme-color" content="#106CC8">
-</head>
-
-<body>
-	<nav id="nav">
-		<div class="main-header">
-			<div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
+---
+title: Settings
+js: settings
+no-container: true
+layout: page
+---
+<form id="settings" class="container">
+	<div class="card-container">
+		<div class="settingsHeader">Wi-Fi server</div>
+		<div class="card-small smaller">
+			<div class="row">
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
+						<label for="ssid">SSID</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
+						<label for="password">Password</label>
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="input-container">
+						<input placeholder=" " id="apChannel" type="number" required="" min="1" max="14">
+						<label for="apChannel">Channel</label>
+					</div>
+				</div>
+				<div class="col-6">
+					<label for="ssidHidden" class="checkboxContainer invert">
+						<input type="checkbox" name="ssidHidden" id="ssidHidden" value="false">
+						<label class="checkbox" for="ssidHidden"></label>
+						Hide SSID
+					</label>
+				</div>
+			</div>
 		</div>
-		<div id="links">
-			<a href="./">Scan</a>
-			<a href="./users.html">Users</a>
-			<a href="./attack.html">Attack</a>
-			<a href="./detector.html">Detector</a>
-			<a href="./settings.html" class="active">Settings</a>
-			<a class="right" href="./info.html">Info</a>
-		</div>
-	</nav>
-	<div id="notification"></div>
-	<div id="spinner-container"></div>
-	<script>
-	/(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal");
-	</script>
-	<div class="main-wrap">
-		<form id="settings" class="container">
-			<div class="card-container">
-				<div class="settingsHeader">Wi-Fi server</div>
-				<div class="card-small smaller">
-					<div class="row">
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
-								<label for="ssid">SSID</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
-								<label for="password">Password</label>
-							</div>
-						</div>
-						<div class="col-6">
-							<div class="input-container">
-								<input placeholder=" " id="apChannel" type="number" required="" min="1" max="14">
-								<label for="apChannel">Channel</label>
-							</div>
-						</div>
-						<div class="col-6">
-							<label for="ssidHidden" class="checkboxContainer invert">
-								<input type="checkbox" name="ssidHidden" id="ssidHidden" value="false">
-								<label class="checkbox" for="ssidHidden"></label>
-								Hide SSID
-							</label>
+	</div><div class="card-container">
+		<div class="settingsHeader">Wi-Fi client</div>
+		<div class="card-small smaller">
+			<div class="row">
+				<div class="col-12">
+					<label for="wifiClient" class="checkboxContainer">
+						Enable WiFi client
+						<input type="checkbox" name="wifiClient" id="wifiClient" value="false">
+						<label class="checkbox" for="wifiClient"></label>
+					</label>
+				</div>
+				<div id="clientContainer" class="input-container">
+					<div class="col-12">
+						<br>
+						<div class="input-container">
+							<input placeholder=" " id="ssidClient" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
+							<label for="ssidClient">Network SSID</label>
 						</div>
 					</div>
-				</div>
-			</div><div class="card-container">
-				<div class="settingsHeader">Wi-Fi client</div>
-				<div class="card-small smaller">
-					<div class="row">
-						<div class="col-12">
-							<label for="wifiClient" class="checkboxContainer">
-								Enable WiFi client
-								<input type="checkbox" name="wifiClient" id="wifiClient" value="false">
-								<label class="checkbox" for="wifiClient"></label>
-							</label>
-						</div>
-						<div id="clientContainer" class="input-container">
-							<div class="col-12">
-								<br>
-								<div class="input-container">
-									<input placeholder=" " id="ssidClient" type="text" required="" minlength="1" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
-									<label for="ssidClient">Network SSID</label>
-								</div>
-							</div>
-							<div class="col-12">
-								<div class="input-container">
-									<input placeholder=" " id="passwordClient" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
-									<label for="passwordClient">Network password</label>
-								</div>
-							</div>
-							<div class="col-12">
-								<div class="input-container">
-									<input placeholder=" " id="hostname" type="text" required="" minlength="1" maxlength="12" autocorrect="off" autocapitalize="none" spellcheck="false">
-									<label for="hostname">ESP hostname</label>
-								</div>
-							</div>
+					<div class="col-12">
+						<div class="input-container">
+							<input placeholder=" " id="passwordClient" type="text" required="" minlength="8" maxlength="32" autocorrect="off" autocapitalize="none" spellcheck="false">
+							<label for="passwordClient">Network password</label>
 						</div>
 					</div>
-				</div>
-			</div><div class="card-container">
-				<div class="settingsHeader">Customization</div>
-				<div class="card-small smaller">
-					<div class="row">
-						<div class="col-12">
-							<label for="darkMode" class="checkboxContainer">
-								Enable dark mode
-								<input type="checkbox" name="darkMode" id="darkMode" value="false">
-								<label class="checkbox" for="darkMode">
-							</label>
-						</div>
-						<div class="col-12">
-							<label for="cache" class="checkboxContainer">
-								Enable server caching
-								<input type="checkbox" name="cache" id="cache" value="false">
-								<label class="checkbox" for="cache">
-							</label>
-						</div>
-						<div class="col-12">
-							<div class="input-container" id="cacheContainer">
-								<input placeholder=" " id="serverCache" type="number" required="" min="0" max="9999">
-								<label for="serverCache">Cache expiration time</label>
-							</div>
-						</div>
-						<br><br><hr>
-						<div class="col-12">
-							<label for="useLed" class="checkboxContainer">
-								Enable LED indicator
-								<input type="checkbox" name="useLed" id="useLed" value="false">
-								<label class="checkbox" for="useLed">
-							</label>
-						</div>
-						<div class="col-12">
-							<div class="input-container" id="ledContainer">
-								<input placeholder=" " id="ledPin" type="number" required="" min="0" max="18">
-								<label for="ledPin">LED Pin</label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div><div class="card-container">
-				<div class="settingsHeader">UI tweaks</div>
-				<div class="card-small smaller">
-					<div class="row">
-						<div class="col-12">
-							<label for="cache" class="checkboxContainer">
-								Simplify interface
-								<input type="checkbox" name="cache" id="cache" value="false">
-								<label class="checkbox" for="cache">
-							</label>
-						</div>
-						<div class="col-12">
-							<label for="darkMode" class="checkboxContainer">
-								Smaller table rows
-								<input type="checkbox" name="darkMode" id="darkMode" value="false">
-								<label class="checkbox" for="darkMode">
-							</label>
-						</div>
-						<div class="col-12">
-							<label for="cache" class="checkboxContainer">
-								Show reboot button
-								<input type="checkbox" name="cache" id="cache" value="false">
-								<label class="checkbox" for="cache">
-							</label>
-						</div>
-					</div>
-				</div>
-			</div><div class="card-container">
-				<div class="settingsHeader">Scan &amp; Attack</div>
-				<div class="card-small">
-					<div class="row">
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="scanTime" type="number" required="" min="1" max="255">
-								<label for="scanTime">Scan timeout</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="timeout" type="number" required="" min="-1" max="65536">
-								<label for="timeout">Attack timeout</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<div class="input-container" id="macContainer">
-								<input placeholder=" " id="macAp" type="text" required="" minLength="1" maxLength="14" autocorrect="off" autocapitalize="none" spellcheck="false">
-								<label for="macAp">MAC address</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<label for="randMacAp" class="checkboxContainer">Random MAC address
-								<input type="checkbox" name="randMacAp" id="randMacAp" value="false">
-								<label class="checkbox" for="randMacAp">
-							</label>
-						</div>
-						<div class="col-12">
-							<label for="apScanHidden" class="checkboxContainer">
-								Scan for hidden networks
-								<input type="checkbox" name="apScanHidden" id="apScanHidden" value="false">
-								<label class="checkbox" for="apScanHidden">
-							</label>
-						</div>
-						<div class="col-12">
-							<label for="multiAPs" class="checkboxContainer">
-								Select multiple networks
-								<input type="checkbox" name="multiAPs" id="multiAPs" value="false">
-								<label class="checkbox" for="multiAPs">
-							</label>
-						</div>
-						<div class="col-12">
-							<label for="multiAttacks" class="checkboxContainer">
-								Simultaneous attacks
-								<input type="checkbox" name="multiAttacks" id="multiAttacks" value="false">
-								<label class="checkbox" for="multiAttacks">
-							</label>
-						</div>
-					</div>
-				</div>
-			</div><div class="card-container">
-				<div class="settingsHeader">Advanced</div>
-				<div class="card-small">
-					<div class="row">
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="deauthReason" type="number" required="" min="1" max="45">
-								<label for="deauthReason">Deauth reason-code</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="packetRate" type="number" required="" min="1" max="300">
-								<label for="packetRate">Packet rate (pkts/s)</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<div class="input-container">
-								<input placeholder=" " id="macInterval" type="number" required="" min="0" max="65000">
-								<label for="packetRate">MAC Change Interval</label>
-							</div>
-						</div>
-						<div class="col-12">
-							<label for="beaconInterval" class="checkboxContainer">
-								1s Beacon interval
-								<input type="checkbox" name="beaconInterval" id="beaconInterval" value="false">
-								<label class="checkbox" for="beaconInterval">
-							</label>
+					<div class="col-12">
+						<div class="input-container">
+							<input placeholder=" " id="hostname" type="text" required="" minlength="1" maxlength="12" autocorrect="off" autocapitalize="none" spellcheck="false">
+							<label for="hostname">ESP hostname</label>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="card-container dual">
-				<!-- Leave type="button", it prevents the form defaulting to submit buttons -->
-				<button onclick="resetSettings()" class="redBtn" type="button">reset</button>
-				<button class="button-primary right" onclick="saveSettings()" type="button">save</button>
+		</div>
+	</div><div class="card-container">
+		<div class="settingsHeader">Customization</div>
+		<div class="card-small smaller">
+			<div class="row">
+				<div class="col-12">
+					<label for="darkMode" class="checkboxContainer">
+						Enable dark mode
+						<input type="checkbox" name="darkMode" id="darkMode" value="false">
+						<label class="checkbox" for="darkMode">
+					</label>
+				</div>
+				<div class="col-12">
+					<label for="cache" class="checkboxContainer">
+						Enable server caching
+						<input type="checkbox" name="cache" id="cache" value="false">
+						<label class="checkbox" for="cache">
+					</label>
+				</div>
+				<div class="col-12">
+					<div class="input-container" id="cacheContainer">
+						<input placeholder=" " id="serverCache" type="number" required="" min="0" max="9999">
+						<label for="serverCache">Cache expiration time</label>
+					</div>
+				</div>
+				<br><br><hr>
+				<div class="col-12">
+					<label for="useLed" class="checkboxContainer">
+						Enable LED indicator
+						<input type="checkbox" name="useLed" id="useLed" value="false">
+						<label class="checkbox" for="useLed">
+					</label>
+				</div>
+				<div class="col-12">
+					<div class="input-container" id="ledContainer">
+						<input placeholder=" " id="ledPin" type="number" required="" min="0" max="18">
+						<label for="ledPin">LED Pin</label>
+					</div>
+				</div>
 			</div>
-		</form>
-		<footer></footer>
-		<script src="./js/functions.js"></script>
-		<script src="./js/settings.js"></script>
+		</div>
+	</div><div class="card-container">
+		<div class="settingsHeader">UI tweaks</div>
+		<div class="card-small smaller">
+			<div class="row">
+				<div class="col-12">
+					<label for="cache" class="checkboxContainer">
+						Simplify interface
+						<input type="checkbox" name="cache" id="cache" value="false">
+						<label class="checkbox" for="cache">
+					</label>
+				</div>
+				<div class="col-12">
+					<label for="darkMode" class="checkboxContainer">
+						Smaller table rows
+						<input type="checkbox" name="darkMode" id="darkMode" value="false">
+						<label class="checkbox" for="darkMode">
+					</label>
+				</div>
+				<div class="col-12">
+					<label for="cache" class="checkboxContainer">
+						Show reboot button
+						<input type="checkbox" name="cache" id="cache" value="false">
+						<label class="checkbox" for="cache">
+					</label>
+				</div>
+			</div>
+		</div>
+	</div><div class="card-container">
+		<div class="settingsHeader">Scan &amp; Attack</div>
+		<div class="card-small">
+			<div class="row">
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="scanTime" type="number" required="" min="1" max="255">
+						<label for="scanTime">Scan timeout</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="timeout" type="number" required="" min="-1" max="65536">
+						<label for="timeout">Attack timeout</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="input-container" id="macContainer">
+						<input placeholder=" " id="macAp" type="text" required="" minLength="1" maxLength="14" autocorrect="off" autocapitalize="none" spellcheck="false">
+						<label for="macAp">MAC address</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<label for="randMacAp" class="checkboxContainer">Random MAC address
+						<input type="checkbox" name="randMacAp" id="randMacAp" value="false">
+						<label class="checkbox" for="randMacAp">
+					</label>
+				</div>
+				<div class="col-12">
+					<label for="apScanHidden" class="checkboxContainer">
+						Scan for hidden networks
+						<input type="checkbox" name="apScanHidden" id="apScanHidden" value="false">
+						<label class="checkbox" for="apScanHidden">
+					</label>
+				</div>
+				<div class="col-12">
+					<label for="multiAPs" class="checkboxContainer">
+						Select multiple networks
+						<input type="checkbox" name="multiAPs" id="multiAPs" value="false">
+						<label class="checkbox" for="multiAPs">
+					</label>
+				</div>
+				<div class="col-12">
+					<label for="multiAttacks" class="checkboxContainer">
+						Simultaneous attacks
+						<input type="checkbox" name="multiAttacks" id="multiAttacks" value="false">
+						<label class="checkbox" for="multiAttacks">
+					</label>
+				</div>
+			</div>
+		</div>
+	</div><div class="card-container">
+		<div class="settingsHeader">Advanced</div>
+		<div class="card-small">
+			<div class="row">
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="deauthReason" type="number" required="" min="1" max="45">
+						<label for="deauthReason">Deauth reason-code</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="packetRate" type="number" required="" min="1" max="300">
+						<label for="packetRate">Packet rate (pkts/s)</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="input-container">
+						<input placeholder=" " id="macInterval" type="number" required="" min="0" max="65000">
+						<label for="packetRate">MAC Change Interval</label>
+					</div>
+				</div>
+				<div class="col-12">
+					<label for="beaconInterval" class="checkboxContainer">
+						1s Beacon interval
+						<input type="checkbox" name="beaconInterval" id="beaconInterval" value="false">
+						<label class="checkbox" for="beaconInterval">
+					</label>
+				</div>
+			</div>
+		</div>
 	</div>
-</body>
+	<div class="card-container dual">
+		<!-- Leave type="button", it prevents the form defaulting to submit buttons -->
+		<button onclick="resetSettings()" class="redBtn" type="button">reset</button>
+		<button class="button-primary right" onclick="saveSettings()" type="button">save</button>
+	</div>
+</form>
