--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -32,6 +32,11 @@
 								</div>
 							</div>
 						</div><div id="c2">
+							<div class="card-header">
+								<svg viewBox="0 0 24 24" onclick="back()">
+									<path d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z" />
+								</svg>
+							</div>
 							<div class="card-content">
 								<div class="row">
 									<div class="col-6">
@@ -81,22 +86,26 @@
 		<footer></footer>
 		<script src="./js/functions.js"></script>
 		<script>
-		var ssid = getE('ssid');
-		var password = getE('password');
-		var darkMode = document.getElementById('darkMode');
-		var link = document.createElement("link");
-		var cookie = document.cookie;
+		var ssid = getE('ssid'),
+			password = getE('password'),
+			darkMode = document.getElementById('darkMode'),
+			link = document.createElement("link");
 
 		function accept() {
 			toTop()
 			document.getElementById("card-wrapper").className = "accept";
 			document.getElementById("h").innerHTML = "Setup Wi-PWN";
 			document.title = "Setup Wi-PWN";
-			document.cookie = "accept=true";
+			push("configure")
 			setTimeout(function() { document.getElementById("c3").className = "away" }, 500);
 		}
-		if (cookie.indexOf("accept=true") >= 0) {
-			document.getElementById("c1").setAttribute("style", "transition: none;");
+		function back() {
+			document.getElementById("card-wrapper").className = "";
+			document.getElementById("c1").setAttribute("style", "");
+			push()
+		}
+		if (window.location.search == "?configure") {
+			document.getElementById("c1").setAttribute("style", "transition: none");
 			accept();
 		}
 
@@ -169,6 +178,17 @@
 				scroll(0, 0)
 			}
 		}
+		// Windows URL listener (Eg. History back + forward keys)
+
+		var currentPage = window.location.href;
+
+		// listen for changes
+		setInterval(function() {
+			if (currentPage != window.location.href) {
+				// page has changed, set new page as 'current'
+				currentPage = window.location.href;
+			}
+		}, 500);
 		fadeIn();
 		</script>
 		<style>
