--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -16,6 +16,7 @@ layout: page
 				</h2>
 			</a>
 		</div>
+		{% comment %}
 		<table>
 			<form method="POST" action="/update" enctype="multipart/form-data" id="ota">
 				<tr>
@@ -31,6 +32,7 @@ layout: page
 			</form>
 			<br>
 		</table>
+		{% endcomment %}
 		<div class="card-action">
 			<a href="https://samdenty99.github.io/r?github" target="blank_" class="button">Github</a><a href="https://samdenty99.github.io/projects" class="button right" target="blank_">Other projects</a>
 		</div>
