[*] Some stability improvements

--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -68,7 +68,7 @@ layout: page
 			</tr>
 		</table>
 		<div class="card-action">
-			<a class="button" onclick="resetSSID()">reset</a>
+			<a onclick="clearSSID()" class="button secondary right">clear</a>
 			<a class="button right" onclick="saveSSID()">save</a>
 		</div>
 	</div>
