[+] Loads of fixes & additions
Check

--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -12,8 +12,8 @@ layout: page
 	<div class="card">
 		<table id="apscan"></table>
 		<div class="card-action">
-			<a onclick="window.location='./users.html'" class="button light">Users</a>
-			<a onclick="window.location='./attack.html'" class="button right">Attack</a>
+			<a onclick="window.location='./users'" class="button light">Users</a>
+			<a onclick="window.location='./attack'" class="button right">Attack</a>
 		</div>
 	</div>
 	<div class="network-info">
