[-] No need to redirect

--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -115,24 +115,24 @@ layout: page
 		<div class="card-small smaller">
 			<div class="row">
 				<div class="col-12">
-					<label for="cache" class="checkboxContainer">
+					<label for="simplify" class="checkboxContainer">
 						Simplify interface
-						<input type="checkbox" name="cache" id="cache" value="false">
-						<label class="checkbox" for="cache">
+						<input type="checkbox" name="simplify" id="simplify" value="false">
+						<label class="checkbox" for="simplify">
 					</label>
 				</div>
 				<div class="col-12">
-					<label for="darkMode" class="checkboxContainer">
+					<label for="smaller" class="checkboxContainer">
 						Smaller table rows
-						<input type="checkbox" name="darkMode" id="darkMode" value="false">
-						<label class="checkbox" for="darkMode">
+						<input type="checkbox" name="smaller" id="smaller" value="false">
+						<label class="checkbox" for="smaller">
 					</label>
 				</div>
 				<div class="col-12">
-					<label for="cache" class="checkboxContainer">
+					<label for="showReboot" class="checkboxContainer">
 						Show reboot button
-						<input type="checkbox" name="cache" id="cache" value="false">
-						<label class="checkbox" for="cache">
+						<input type="checkbox" name="showReboot" id="showReboot" value="false">
+						<label class="checkbox" for="showReboot">
 					</label>
 				</div>
 			</div>
